--- a/Apache Echarts React/package.json
+++ b/Apache Echarts React/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "react": "^18.3.1",
